--- a/wp-content/themes/thestanforddaily/sass/site/_site.scss
+++ b/wp-content/themes/thestanforddaily/sass/site/_site.scss
@@ -36,7 +36,14 @@
 }
 
 
-/* Header Donation Banner */
+/* Donation Banner */
+@media screen and (max-width: $size__break-mobile) {
+    .tsd-donate-header {
+        // To make the banner below the .site-branding fixed bar on smaller screens.
+        margin-top: 60px;
+    }
+}
+
 .tsd-donation-form-recurring {
     display: none;
 }
